all FCC titles updated

--- a/fcc-product-landing-page/index.html
+++ b/fcc-product-landing-page/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Fontannaz Benjamin" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>FCC Product Landing Page</title>
+    <title>FCC - Product Landing Page</title>
     <link rel="shortcut icon" href="./images/white-nike-swoosh-png-10.png">
     <!-- fontawesome script kit -->
     <script src="https://kit.fontawesome.com/1184d4d3c7.js" crossorigin="anonymous"></script>
