--- a/fcc-tribute-page/index.html
+++ b/fcc-tribute-page/index.html
@@ -5,7 +5,7 @@
   <meta name="author" content="Fontannaz Benjamin"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title id="title">Ray & Charles Eames Tribute Page</title>
+	<title id="title">FCC - Tribute Page</title>
   	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="shortcut icon" href="./images/favicon.ico">
