FCC Survey Page title updated

--- a/fcc-survey-page/index.html
+++ b/fcc-survey-page/index.html
@@ -9,7 +9,7 @@
   <title>FCC - Survey Form</title>
   <link rel="shortcut icon" href="./images/basketball-32.png">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Anaheim" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/backgroundMove.js"></script>
@@ -236,7 +236,7 @@
 </div>
 
 <!-- Scripts -->
-  <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/backgroundMove.js"></script>
   <script src="js/script.js"></script>
